# uvc2gl

./: .gitignore  CMakeLists.txt  README.md  VERSION  VERSIONING.md  main.cpp
.cache/clangd/index/: Application.cpp.EEE60D6D14434959.idx  Application.h.D4C18741D988B493.idx  Frame.h.2943142616747A9A.idx  MjpgDecodeTest.cpp.5B5B49A39D6CA657.idx  MjpgDecoder.cpp.A8D2A00EB537D60F.idx  MjpgDecoder.h.4B03B33CE08A071F.idx  Quad.cpp.F44A87BF38ACCCDC.idx  Quad.h.464ED83DD0B9EEBD.idx  Renderer.cpp.B45BF23A1E1271F1.idx  Renderer.h.29CC1EA620CC6E30.idx  RingBuffer.h.1395FA38AA67FA95.idx  Shader.cpp.EED60D910238C25C.idx  Shader.h.9BB17B31618FE086.idx  V4L2Capabilities.cpp.B28E4941D9EBFF54.idx  V4L2Capabilities.h.94321C4B68DD3C1F.idx  VideoCapture.cpp.16A9981F2BE9E299.idx  VideoCapture.h.0ABCB5906D6A013B.idx  Window.cpp.B1951C289DACD41E.idx  Window.h.02611BE2F5D7FF0E.idx  imconfig.h.8E66F3A2508F1CF0.idx  imgui.cpp.0C604AAA01CF96EC.idx  imgui.h.66CE443767FE051A.idx  imgui_draw.cpp.3D8C58A350D60155.idx  imgui_impl_opengl3.cpp.51B4C2975BCC80DA.idx  imgui_impl_opengl3.h.68853CB1A4705067.idx  imgui_impl_opengl3_loader.h.4A6F0F8115E0D15B.idx  imgui_impl_sdl2.cpp.84FAA5AE63EB3F50.idx  imgui_impl_sdl2.h.778B4B283F3E5716.idx  imgui_internal.h.7492D3E973C3BB59.idx  imgui_tables.cpp.1B87E58CA19E77BC.idx  imgui_widgets.cpp.D797C8CF1FE25EA3.idx  imstb_rectpack.h.3B6599EA9E3B85CE.idx  imstb_textedit.h.D743D522598F0E0A.idx  imstb_truetype.h.812D46E3BE2C47BD.idx  main.cpp.84C68BA8CC30BBBB.idx  v4l2Probe.cpp.E6F3CE3560FCF4AD.idx  v4l2StreamMjpg.cpp.AD213718B353E480.idx
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-version.yml  build.yml  release.yml
src/: README.md
src/assets/shaders/: Quad.frag
src/audio/: ALSACapabilities.cpp  ALSACapabilities.h  AudioCapture.cpp  AudioCapture.h  AudioPlayback.cpp  AudioPlayback.h  AudioProbe.cpp
src/core/: Application.cpp  Application.h  Config.h  Version.h  Version.h.in
src/graphics/: Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/video/: Frame.h  MjpgDecodeTest.cpp  MjpgDecoder.cpp  MjpgDecoder.h  RingBuffer.h  V4L2Capabilities.cpp  V4L2Capabilities.h  VideoCapture.cpp  VideoCapture.h  YuyvDecodeTest.cpp  YuyvDecoder.cpp  YuyvDecoder.h  v4l2Probe.cpp  v4l2StreamMjpg.cpp
